# sensocto

./: .env.sample  .formatter.exs  .gitignore  .recode.exs  .tool-versions  Dockerfile  README.md  README_attention.md  README_hotdeploy.md  docker-compose.app.yml  docker-compose.yml  fly-roundtrip.sh  fly.toml  github-commands.txt  livebook-phoenixclient.livemd  mix.exs  observer.bash  run.sh  sensocto.code-workspace
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: accessibility-review.yml  api-client-request.yml  architecture-review.yml  config.yml  innovation-brainstorm.yml  security-review.yml  testing-request.yml
.github/scripts/: setup-agent-labels.sh
.github/workflows/: claude-agent.yml  claude-agents.yml  claude-pr-review.yml  claude-scheduled.yml  clients-ci.yml  fly.yml  python-sdk.yml  rust-sdk.yml  threejs-sdk.yml  unity-sdk.yml
assets/: build.backup.js  build.js  build.js.backup  package-lock.json  package.json  tailwind.config.js  tsconfig.json
assets/css/: app.css
assets/js/: app copy.js  app.js  audio_output_router.js  ble.js  connection-monitor.js  hooks.js  indexeddb.js  (+19 more)
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/sensocto/: __init__.py  call.py  client.py  config.py  errors.py  models.py  sensor.py  socket.py
clients/python/sensocto/tests/: __init__.py
clients/rust/: .gitignore  Cargo.toml  README.md
clients/rust/src/: channel.rs  client.rs  config.rs  error.rs  lib.rs  lobby.rs  models.rs  room_session.rs  socket.rs
config/: config.exs  dev.exs  prod.exs  runtime.exs  simulators.yaml  test.exs
db/: fly.toml
docs/: CLUSTERING_PLAN.md  VISION.md  api-attributes-reference.md  architecture.md  attention-system.md  attributes.md  beam-vm-tuning.md  deployment.md  e2e-testing.md  getting-started.md  github-agents.md  graph-visualization.md  iroh-room-storage-architecture.md  letsgobio.md  liveview-architecture.md  lobby-room-unification.md  membrane-webrtc-integration.md  midi-output.md  modal-accessibility-implementation.md  room-markdown-format.md  scalability.md  simulator-integration.md  supervision-tree.md  tidewave-production.md
lib/: sensocto.ex  sensocto_native.ex  sensocto_web.ex
lib_disabled/: lvn_entry_live.swiftui.ex.disabled  lvn_signin_live.swiftui.ex.disabled  realitykit_live.ex.disabled  sensocto_native.ex  sensor_component.swiftui.ex.disabled
livebooks/: adaptive_video_quality.livemd  api-developer-experience.livemd  ash_neo4j_demo.livemd  biomimetic-resilience.livemd  livebook-ash.livemd  livebook-phoenixclient.livemd  livebook.livemd  liveview-processing.livemd  map-juggeling.livemd  object3d_exploration.livemd  resilience-assessment.livemd  security-assessment.livemd  supervisor_mermaid_viz.livemd  supervisors.livemd  test-accessibility-assessment.livemd
plans/: MODAL_ACCESSIBILITY_SUMMARY.md  PLAN-adaptive-video-quality.md  PLAN-cluster-sensor-visibility.md  PLAN-distributed-discovery.md  PLAN-platform-features.md  PLAN-research-grade-synchronization.md  PLAN-room-iroh-migration.md  PLAN-sensor-component-migration.md  PLAN-sensor-scaling-refactor.md  PLAN-startup-optimization.md  PLAN-turn-cloudflare.md  delta-encoding-ecg.md
postgres-docker/: Dockerfile  initdb_citext.sh
rel/: env.sh.eex
reports/: ACTION-PLAN.md  api-client-developer.md  client-offload-strategy.md  elixir-test-accessibility-expert.md  interdisciplinary-innovator.md  iroh-integration-architect.md  livebook-tester.md  resilient-systems-architect.md  reuss-river-apis.md  security-advisor.md
simulator/: ble-server.py  heartrate_data.csv  main.py  pyproject.toml  python_phoenix_client.py  requirements.txt  run-jupyter.sh  sensocto-simulator-concurrent.py  sensocto-simulator.py  sensocto-simulator.txt  signal_simulator.ipynb  signal_simulator_orig.ipynb  simulator-concurrent-runner.py  test-simulator-vici.py  test-simulator-vici.txt
test/: test_helper.exs
wasm-sparkline/: Cargo.toml  Dockerfile  diff-index.html.txt  diff-index.js.txt  diff-lib.rs.txt  index.html  index.js  infos.txt  roundtrip.sh
wasm-sparkline/src/: lib.rs
(+773 files in other folders)
