[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensocto"
version = "0.1.0"
description = "Python client library for the Sensocto sensor platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Sensocto", email = "support@sensocto.com" }
]
keywords = ["sensocto", "sensors", "iot", "websocket", "phoenix", "realtime"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "websockets>=11.0",
    "aiohttp>=3.8",
    "pydantic>=2.0",
]

[project.optional-dependencies]
sync = [
    "requests>=2.28",
    "websocket-client>=1.5",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/sensocto/python-sdk"
Documentation = "https://docs.sensocto.com"
Repository = "https://github.com/sensocto/python-sdk"
Issues = "https://github.com/sensocto/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["sensocto"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
