[package]
name = "sensocto"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["Sensocto <support@sensocto.com>"]
description = "Rust client library for the Sensocto sensor platform"
license = "MIT"
repository = "https://github.com/sensocto/rust-sdk"
documentation = "https://docs.rs/sensocto"
readme = "README.md"
keywords = ["sensocto", "sensors", "iot", "websocket", "phoenix"]
categories = ["api-bindings", "web-programming::websocket"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
tracing = "0.1"
rand = "0.8"

# Channel communication
flume = "0.11"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
blocking = []

# Examples will be added in future releases
# [[example]]
# name = "basic_sensor"
# path = "examples/basic_sensor.rs"
#
# [[example]]
# name = "video_call"
# path = "examples/video_call.rs"
